TinyMUX 2.7:  CHANGES
Last Update:  December 2006

Major changes that may affect performance and require softcode tweaks:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 -- Placeholder.


Feature Additions:
~~~~~~~~~~~~~~~~~
 -- Help files support PennMUSH-style multiple topics for each help entry;
    consecutive &FOO lines refer to the same content (Issue 238).


Bug Fixes:
~~~~~~~~~
 -- Using \ as a shortcut to @emit no longer causes the beginning of the
    message to be escaped (Issue 219).


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~
 -- Help entries use less memory (specific improvements described in
    Issue 238 comments).


Cosmetic Changes:
~~~~~~~~~~~~~~~~
 -- Placeholder.


Miscellaneous:
~~~~~~~~~~~~~
 -- Documented Lbufref and Regref pools in 'wizhelp @list alloc'.
 -- Documented use of a single backslash as a proper shortcut to
    @emit (Issue 219).